# GameProjectServer

./: CMakeLists.txt  CMakePresets.json  README.md
GameProjectServer/: CMakeLists.txt  Config.cpp  Config.h  Log.cpp  Log.h  Util.cpp  Util.h
include/: Config.h  Log.h  Singleton.h
source/: CMakeLists.txt  Config.cpp  Log.cpp  Util.cpp
tests/: test.cpp  test_config.cpp
