# CMakeList.txt: GameProjectServer ?? CMake ??????????????????????
# ?????????????
#

# ?????????? MSVC ?????????????????
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

# ??????????????????????
set(LIB_SRC
    Log.cpp
    Log.h
    Util.cpp
    Util.h
)

# ??????????
add_library(GameProjectServer SHARED ${LIB_SRC})

# ?????????
add_library(GameProjectServer_static STATIC ${LIB_SRC})
SET_TARGET_PROPERTIES(GameProjectServer_static PROPERTIES OUTPUT_NAME "GameProjectServer")

# ?????????
target_include_directories(GameProjectServer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(GameProjectServer_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

# ???? C++ ???
set_target_properties(GameProjectServer PROPERTIES
    CXX_STANDARD 11
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)

set_target_properties(GameProjectServer_static PROPERTIES
    CXX_STANDARD 11
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)

# ????????????????????
if(MSVC)
    # ????????????????????
    target_compile_options(GameProjectServer PRIVATE
        $<$<CONFIG:Debug>:/ZI>
        $<$<CONFIG:RelWithDebInfo>:/ZI>
    )
    # ??????????????????????
    target_link_options(GameProjectServer PRIVATE
        $<$<CONFIG:Debug>:/INCREMENTAL>
        $<$<CONFIG:RelWithDebInfo>:/INCREMENTAL>
    )
endif()
